scrollbar fixes

--- a/src/styles/sass/global.scss
+++ b/src/styles/sass/global.scss
@@ -206,21 +206,21 @@ body {
 
 	.dashboard__grid-container {
 		display: grid;
-		grid-template-columns: 1fr 5fr;
+		grid-template-columns: 2fr 5fr;
 		height: 100%;
 
 		.dashboard__side-menu {
-			@include custom-scrollbar(#888, #f1f1f1, #555);
+			@include custom-scrollbar($sun, $wather, $sun);
 
 			background-color: $wather;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
-
-			overflow-y: scroll;
 			position: relative;
 			max-height: 100vh;
-			width: fit-content;
+			width: -moz-fit-content;
+			width: 100%;
+			overflow-y: scroll;
 
 			ul {
 				margin: 5rem 1.5rem;
